--- a/Projects/PitchShiftAdaptiveResolutionPlugin/Builds/VisualStudio2017/PitchShiftAdaptiveResolutionPlugin_SharedCode.vcxproj
+++ b/Projects/PitchShiftAdaptiveResolutionPlugin/Builds/VisualStudio2017/PitchShiftAdaptiveResolutionPlugin_SharedCode.vcxproj
@@ -137,6 +137,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\..\PureCRTP\Utilities\pffft.c"/>
+    <ClCompile Include="..\..\..\..\PureCRTP\src\FrequencyDomain\CriticalBands.cpp"/>
     <ClCompile Include="..\..\Source\PluginProcessor.cpp"/>
     <ClCompile Include="..\..\Source\PluginEditor.cpp"/>
     <ClCompile Include="..\..\..\..\JUCE\modules\juce_audio_basics\buffers\juce_AudioChannelSet.cpp">
