Squashed 'PureCRTP/' changes from c26d92e..837b74e
837b74e changed default number of channels to 2
8e4806a changed default parameter PreGain
3734bbe Implemented linked processing when more than 1 channel
1c61402 Added attack
4ff847e fixed default value
15dd858 remove ResetInitialValue from som FilterMinMax classes
bf26a39 Added new approximation functions and remove some unnecessary includes
aee11dc Updated DetectTonal to new algorithm
c26bb5d fixed floating point division
3dee89f modified StreamingMinMax so it only uses 1 delayline
cb6a0ac Added some interface tests
77cce12 renamed build folders
57d9a4f Updated comments
3dd946c Added LimiterHard
bac0f1d Added versions that only find Min or Max
e0b70b7 Added FilterMinMax and StreamingMinMax classes with unittests

git-subtree-dir: PureCRTP
git-subtree-split: 837b74e3723ea8e3d1ce8ee02a514806948ae38c

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
-Build/win/x64/
-Build/win/UnitTest/x64/
-Build/win/.vs/
+Build/VisualStudio2017/x64/
+Build/VisualStudio2017/UnitTest/x64/
+Build/VisualStudio2017/.vs/
+Build/VisualStudio2019/x64/
+Build/VisualStudio2019/UnitTest/x64/
+Build/VisualStudio2019/.vs/
